--- a/VenturaITC.DSMS/Views/Shared/_Layout.cshtml
+++ b/VenturaITC.DSMS/Views/Shared/_Layout.cshtml
@@ -26,12 +26,22 @@
                     <li>@Html.ActionLink(@Resources.ResourcesMenus.Home, "Index", "Home")</li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            @Resources.ResourcesMenus.Students
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink(@Resources.ResourcesMenus.CreateNew, "Create", "Students")</li>
+                            <li>@Html.ActionLink(@Resources.ResourcesMenus.Management, "Index", "Students")</li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             @Resources.ResourcesMenus.Users
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink(@Resources.ResourcesMenus.UserRegistration, "Create", "Users")</li>
-                            <li>@Html.ActionLink(@Resources.ResourcesMenus.UserManagement, "Index", "Users")</li>
+                            <li>@Html.ActionLink(@Resources.ResourcesMenus.CreateNew, "Create", "Users")</li>
+                            <li>@Html.ActionLink(@Resources.ResourcesMenus.Management, "Index", "Users")</li>
                         </ul>
                     </li>
                 </ul>
