--- a/VenturaITC.DSMS/Views/Students/Create.cshtml
+++ b/VenturaITC.DSMS/Views/Students/Create.cshtml
@@ -21,7 +21,7 @@
                         @Html.LabelFor(model => model.student_type.name, htmlAttributes: new { @class = "control-label col-md-4" })
                         <div class="col-md-8">
                             @Html.DropDownListFor(model => model.student_type_id, null, @Resources.ResourcesFields.DropdownOptionLabel, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.student_type_id, "", new { @class = "text-danger" })
+                            @Html.ValidationMessageFor(model => model.student_type.name, "", new { @class = "text-danger" })
                         </div>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
                     <div class="form-group required">
                         @Html.LabelFor(model => model.birth_date, htmlAttributes: new { @class = "control-label col-md-4" })
                         <div class="col-md-8">
-                            @Html.EditorFor(model => model.birth_date, new { htmlAttributes = new { @class = "form-control", @placeholder = "dd/MM/yyyy" } })
+                            @Html.EditorFor(model => model.birth_date, new { htmlAttributes = new { @class = "form-control"} })
                             @Html.ValidationMessageFor(model => model.birth_date, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                     <div class="form-group required">
                         @Html.LabelFor(model => model.id_issuance_date, htmlAttributes: new { @class = "control-label col-md-4" })
                         <div class="col-md-8">
-                            @Html.EditorFor(model => model.id_issuance_date, new { htmlAttributes = new { @class = "form-control", @placeholder = "dd/MM/yyyy" } })
+                            @Html.EditorFor(model => model.id_issuance_date, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.id_issuance_date, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                     <div class="form-group required">
                         @Html.LabelFor(model => model.id_expiry_date, htmlAttributes: new { @class = "control-label col-md-4" })
                         <div class="col-md-8">
-                            @Html.EditorFor(model => model.id_expiry_date, new { htmlAttributes = new { @class = "form-control", @placeholder = "dd/MM/yyyy" } })
+                            @Html.EditorFor(model => model.id_expiry_date, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.id_expiry_date, "", new { @class = "text-danger" })
                         </div>
                     </div>
