--- a/VenturaITC.DSMS/Views/Students/Create.cshtml
+++ b/VenturaITC.DSMS/Views/Students/Create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Create";
 }
-<h2>@Resources.ResourcesTitles.StudentCreate</h2>
+<h2>@Resources.ResourcesTitles.StudentEnrollment</h2>
 
 @using (Html.BeginForm())
 {
