--- a/VenturaITC.DSMS/Views/Shared/_Layout.cshtml
+++ b/VenturaITC.DSMS/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink(@Resources.ResourcesMenus.CreateNew, "Create", "Students")</li>
+                            <li>@Html.ActionLink(@Resources.ResourcesMenus.Enrollment, "Create", "Students")</li>
                             <li>@Html.ActionLink(@Resources.ResourcesMenus.Management, "Index", "Students")</li>
                         </ul>
                     </li>
