--- a/VenturaITC.DSMS/Views/Students/Create.cshtml
+++ b/VenturaITC.DSMS/Views/Students/Create.cshtml
@@ -3,6 +3,104 @@
 @{
     ViewBag.Title = "Create";
 }
+
+@section scripts{
+    <script>
+        $(function () {
+
+            //Handles the student_type_id DropDownList change event.
+            $('#student_type_id').change(function () {
+
+                var typeID = $('#student_type_id').val();
+
+                switch (typeID) {
+                    //Complete bursary:
+                    case "2":
+                        ResetEnrollmentFields();
+                        $('#payment_type_id').prop('disabled', true);
+                        $('#amountToPay').prop('disabled', true);
+                        $('#payment_id').prop('disabled', true);
+
+                        $('#payment_type_id').val("1");
+                        $('#minimumAmount').val("0,00");
+                        $('#amountToPay').val("0,00");
+                        $('#payment_id').val("0000");
+                        break;
+
+                        //Partial bursary:
+                    case "3":
+                        ResetEnrollmentFields();
+                        $('#minimumAmount').prop('disabled', true);
+                        $('#minimumAmount').val('');
+                        break;
+
+                        //Normal
+                    default:
+                        ResetEnrollmentFields();
+                        break;
+                }
+
+            });
+
+            //Handles the category_id DropDownList change event.
+            $('#category_id').change(function () {
+
+                var categoryID = $('#category_id').val();
+
+                if (categoryID != '') {
+                    //TODO: Move GetCategoryCost to Payments controller.
+                    $.getJSON("/Students/GetCategoryCost", { categoryID: categoryID }, function (data) {
+                        if ($('#student_type_id').val() != "2") {
+                            $('#payment_type_id').prop('disabled', false);
+                        }
+
+                        $('#totalAmount').val(data.categoryCost);
+                    })
+                        .fail(function (data) {
+                            alert("An error ocurred: " + data.responseText);
+                        });
+                } else {
+                    $('#payment_type_id').prop('disabled', true);
+                    $('#totalAmount').val('');
+                }
+            });
+
+            //Handles the payment_type_id DropDownList change event.
+            $('#payment_type_id').change(function () {
+
+                var typeID = $('#payment_type_id').val();
+
+                if (typeID != '') {
+                    //TODO: Move GetCategoryCost to Payments controller.
+                    $.getJSON("/Students/GetPaymentData", { categoryID: $('#category_id').val(), paymentTypeID: typeID }, function (data) {
+                          $('#minimumAmount').val(data.minimumAmount);
+                        $('#amountToPay').val(data.amountToPay);
+                    })
+                        .fail(function (data) {
+                            alert("An error ocurred: " + data.responseText);
+                        });
+                } else {
+                    $('#minimumAmount').val('');
+                    $('#amountToPay').val('');
+                }
+            });
+
+        });
+
+        //Resets the enrollment fields.
+        function ResetEnrollmentFields() {
+            $('#payment_type_id').prop('disabled', false);
+            $('#amountToPay').prop('disabled', false);
+            $('#payment_id').prop('disabled', false);
+
+            $('#payment_type_id').val('');
+            $('#minimumAmount').val('');
+            $('#amountToPay').val('');
+            $('#payment_id').val('');
+        }
+    </script>
+
+}
 <h2>@Resources.ResourcesTitles.StudentEnrollment</h2>
 
 @using (Html.BeginForm())
@@ -248,7 +346,7 @@
                     <div class="form-group required">
                         @Html.LabelFor(model => model.payment_type_id, htmlAttributes: new { @class = "control-label col-md-4" })
                         <div class="col-md-8">
-                            @Html.DropDownListFor(model => model.payment_type_id, null, @Resources.ResourcesFields.DropdownOptionLabel, htmlAttributes: new { @class = "form-control" })
+                            @Html.DropDownListFor(model => model.payment_type_id, null, @Resources.ResourcesFields.DropdownOptionLabel, htmlAttributes: new { @class = "form-control", @disabled = "disabled" })
                             @Html.ValidationMessageFor(model => model.payment_type_id, "", new { @class = "text-danger" })
                         </div>
                     </div>
