--- a/VenturaITC.DSMS/Views/Students/Create.cshtml
+++ b/VenturaITC.DSMS/Views/Students/Create.cshtml
@@ -6,89 +6,13 @@
 
 @section scripts{
     <script>
+        //On document.ready
         $(function () {
-
-            //Handles the student_type_id DropDownList change event.
-            $('#student_type_id').change(function () {
-
-                var typeID = $('#student_type_id').val();
-
-                switch (typeID) {
-                    //Complete bursary:
-                    case "2":
-                        ResetEnrollmentFields();
-                        $('#payment_type_id').prop('disabled', true);
-                        $('#amountToPay').prop('disabled', true);
-                        $('#payment_id').prop('disabled', true);
-
-                        $('#payment_type_id').val("1");
-                        $('#minimumAmount').val("0,00");
-                        $('#amountToPay').val("0,00");
-                        $('#payment_id').val("0000");
-                        break;
-
-                        //Partial bursary:
-                    case "3":
-                        ResetEnrollmentFields();
-                        $('#minimumAmount').prop('disabled', true);
-                        $('#minimumAmount').val('');
-                        break;
-
-                        //Normal
-                    default:
-                        ResetEnrollmentFields();
-                        break;
-                }
-
-            });
-
-            //Handles the category_id DropDownList change event.
-            $('#category_id').change(function () {
-
-                var categoryID = $('#category_id').val();
-
-                if (categoryID != '') {
-                    //TODO: Move GetCategoryCost to Payments controller.
-                    $.getJSON("/Students/GetCategoryCost", { categoryID: categoryID }, function (data) {
-                        if ($('#student_type_id').val() != "2") {
-                            $('#payment_type_id').prop('disabled', false);
-                        }
-
-                        $('#totalAmount').val(data.categoryCost);
-                    })
-                        .fail(function (data) {
-                            alert("An error ocurred: " + data.responseText);
-                        });
-                } else {
-                    $('#payment_type_id').prop('disabled', true);
-                    $('#totalAmount').val('');
-                }
-            });
-
-            //Handles the payment_type_id DropDownList change event.
-            $('#payment_type_id').change(function () {
-
-                var typeID = $('#payment_type_id').val();
-
-                if (typeID != '') {
-                    //TODO: Move GetCategoryCost to Payments controller.
-                    $.getJSON("/Students/GetPaymentData", { categoryID: $('#category_id').val(), paymentTypeID: typeID }, function (data) {
-                          $('#minimumAmount').val(data.minimumAmount);
-                        $('#amountToPay').val(data.amountToPay);
-                    })
-                        .fail(function (data) {
-                            alert("An error ocurred: " + data.responseText);
-                        });
-                } else {
-                    $('#minimumAmount').val('');
-                    $('#amountToPay').val('');
-                }
-            });
 
         });
 
-        //Resets the enrollment fields.
-        function ResetEnrollmentFields() {
+        //Resets the payment fields.
+        function ResetPaymentFields() {
             $('#payment_type_id').prop('disabled', false);
             $('#amountToPay').prop('disabled', false);
             $('#payment_id').prop('disabled', false);
@@ -98,18 +22,92 @@
             $('#amountToPay').val('');
             $('#payment_id').val('');
         }
+
+        //Handles the student_type_id DropDownList change event.
+        $('#student_type_id').change(function () {
+
+            var typeID = $('#student_type_id').val();
+
+            switch (typeID) {
+                //Complete bursary:
+                case "2":
+                    ResetPaymentFields();
+                    $('#payment_type_id').prop('disabled', true);
+                    $('#amountToPay').prop('disabled', true);
+                    $('#payment_id').prop('disabled', true);
+
+                    $('#payment_type_id').val("1");
+                    $('#minimumAmount').val("0,00");
+                    $('#amountToPay').val("0,00");
+                    $('#payment_id').val("0000");
+                    break;
+
+                    //Partial bursary:
+                case "3":
+                    ResetPaymentFields();
+                    $('#minimumAmount').prop('disabled', true);
+                    $('#minimumAmount').val("0.00");
+                    break;
+
+                    //Normal
+                default:
+                    ResetPaymentFields();
+                    break;
+            }
+
+        });
+
+        //Handles the category_id DropDownList change event.
+        $('#category_id').change(function () {
+
+            var categoryID = $('#category_id').val();
+
+            if (categoryID != '') {
+                $.getJSON("/PaymentUtils/GetCategoryCost", { categoryID: categoryID }, function (data) {
+                    if ($('#student_type_id').val() != "2") {
+                        $('#payment_type_id').prop('disabled', false);
+                    }
+
+                    $('#totalAmount').val(data.categoryCost);
+                })
+                    .fail(function (data) {
+                        alert("An error ocurred: " + data.responseText);
+                    });
+            } else {
+                $('#payment_type_id').prop('disabled', true);
+                $('#totalAmount').val('');
+            }
+        });
+
+        $('#payment_type_id').change(function () {
+
+            var typeID = $('#payment_type_id').val();
+
+            if (typeID != '') {
+                $.getJSON("/PaymentUtils/GetEnrollmentPaymentAmounts", { categoryID: $('#category_id').val(), paymentTypeID: typeID }, function (data) {
+                    $('#minimumAmount').val(data.minimumAmount);
+                    $('#amountToPay').val(data.amountToPay);
+                })
+                    .fail(function (data) {
+                        alert("An error ocurred: " + data.responseText);
+                    });
+            } else {
+                $('#minimumAmount').val('');
+                $('#amountToPay').val('');
+            }
+        });
     </script>
 
 }
+
 <h2>@Resources.ResourcesTitles.StudentEnrollment</h2>
+<hr />
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        @*<h4>student</h4>*@
-        <hr />
+    <div class="form-horizontal">     
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <fieldset>
             <legend class="fieldset-legend">@Resources.ResourcesTitles.StudentData</legend>
@@ -226,7 +224,7 @@
                 </div>
                 <div class="col-md-6">
 
-                    <div class="form-group">
+                    <div class="form-group required">
                         @Html.LabelFor(model => model.id_issuance_place, htmlAttributes: new { @class = "control-label col-md-4" })
                         <div class="col-md-8">
                             @Html.DropDownListFor(model => model.id_issuance_place, null, @Resources.ResourcesFields.DropdownOptionLabel, htmlAttributes: new { @class = "form-control" })
@@ -316,7 +314,6 @@
                     </div>
                 </div>
             </div>
-
         </fieldset>
         <br />
 
@@ -383,6 +380,7 @@
             </div>
         </fieldset>
         <br />
+
         <fieldset>
             <legend class="fieldset-legend">@Resources.ResourcesTitles.Documents</legend>
             <div class="row">
@@ -436,9 +434,6 @@
                     </div>
                 </div>
             </div>
-
-
-
         </fieldset>
 
         <div class="form-group">
@@ -446,7 +441,6 @@
                 <input type="submit" value="@Resources.ResourcesButtons.Create" class="btn btn-primary" />
             </div>
         </div>
-
     </div>
 }
 
