--- a/VenturaITC.DSMS/Views/Students/Details.cshtml
+++ b/VenturaITC.DSMS/Views/Students/Details.cshtml
@@ -11,6 +11,14 @@
 
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.student_id)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.student_id)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.full_name)
         </dt>
 
@@ -19,38 +27,30 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.first_name)
+            @Html.DisplayNameFor(model => model.student_type_id)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.first_name)
+            @Html.DisplayFor(model => model.student_type_name)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.last_name)
+            @Html.DisplayNameFor(model => model.category_id)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.last_name)
+            @Html.DisplayFor(model => model.category_name)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.birth_date)
+            @Html.DisplayNameFor(model => model.enrollmentDate)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.birth_date)
+            @Html.DisplayFor(model => model.enrollmentDate)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.gender_id)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.gender_id)
-        </dd>
-
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.place_of_birth)
         </dt>
 
@@ -192,11 +192,11 @@
 
         <dd>
             @Html.DisplayFor(model => model.student_type.name)
-        </dd>
+        </dd>*@
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.number }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink(@Resources.ResourcesLinks.Edit, "Edit", new { id = Model.student_id }) |
+    @Html.ActionLink(@Resources.ResourcesLinks.BackToList, "Index")
 </p>
